--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificação de rodízio</title>
-    <link rel="stylesheet" href="estilos.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="./estilos.css">
+    <script src="./main.js"></script>
 </head>
 <body>
     <p><b>Favor informar o último digito de sua placa e o dia</b></p>
